Implement caregiver response notifications and user profile fields